data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1746.wast
;; 7. **Test Description: Unconditional Branch to Loop Start with Incorrect Stack**    - Define a `loop` where `br_if` unconditionally (with true condition) jumps back but the operand stack is not correctly ordered or insufficient.    - **Constraint Check**: Ensure stack order and height integrity for backward branches.    - **CFG Relevance**: Confirms backward jumps to loop start aligning with CFG stack requirements.

(assert_invalid
  (module (func $backward-loop-unordered-stack
    (loop $loop (i32.const 1) (br_if 0 (i32.const 1)) )
  ))
  "type mismatch"
)